Magick.NET/Native/Settings/MagickSettings.cs

        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_Monochrome_Set(IntPtr instance, [MarshalAs(UnmanagedType.Bool)] bool value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr MagickSettings_Interlace_Get(IntPtr instance);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_Interlace_Set(IntPtr instance, UIntPtr value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool MagickSettings_Verbose_Get(IntPtr instance);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_Verbose_Set(IntPtr instance, [MarshalAs(UnmanagedType.Bool)] bool value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_SetColorFuzz(IntPtr Instance, double value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_SetFileName(IntPtr Instance, IntPtr value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_SetNumberScenes(IntPtr Instance, UIntPtr value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_SetOption(IntPtr Instance, IntPtr key, IntPtr value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_SetPage(IntPtr Instance, IntPtr value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_SetPing(IntPtr Instance, [MarshalAs(UnmanagedType.Bool)] bool value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_SetQuality(IntPtr Instance, UIntPtr value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_SetScenes(IntPtr Instance, IntPtr value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_SetScene(IntPtr Instance, UIntPtr value);
        [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
        public static extern void MagickSettings_SetSize(IntPtr Instance, IntPtr value);
      }
    }
    private sealed class NativeMagickSettings : NativeInstance
    {
      private IntPtr _Instance = IntPtr.Zero;
      protected override void Dispose(IntPtr instance)
      {
        DisposeInstance(instance);
      }
      public static void DisposeInstance(IntPtr instance)
      {
        if (NativeLibrary.Is64Bit)
          NativeMethods.X64.MagickSettings_Dispose(instance);
        else
          NativeMethods.X86.MagickSettings_Dispose(instance);
      }
      public NativeMagickSettings()
      {
        if (NativeLibrary.Is64Bit)
          _Instance = NativeMethods.X64.MagickSettings_Create();
        else
          _Instance = NativeMethods.X86.MagickSettings_Create();
        if (_Instance == IntPtr.Zero)
          throw new InvalidOperationException();
      }
      public override IntPtr Instance
      {
        get
        {
          if (_Instance == IntPtr.Zero)
            throw new ObjectDisposedException(typeof(MagickSettings).ToString());
          return _Instance;
        }
        set
        {
          if (_Instance != IntPtr.Zero)
            Dispose(_Instance);
          _Instance = value;
        }
      }
      public MagickColor BackgroundColor
      {
        get
        {
          IntPtr result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_BackgroundColor_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_BackgroundColor_Get(Instance);
          return MagickColor.CreateInstance(result);
        }
        set
        {
          using (INativeInstance valueNative = MagickColor.CreateInstance(value))
          {
            if (NativeLibrary.Is64Bit)
              NativeMethods.X64.MagickSettings_BackgroundColor_Set(Instance, valueNative.Instance);
            else
              NativeMethods.X86.MagickSettings_BackgroundColor_Set(Instance, valueNative.Instance);
          }
        }
      }
      public ColorSpace ColorSpace
      {
        get
        {
          UIntPtr result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_ColorSpace_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_ColorSpace_Get(Instance);
          return (ColorSpace)result;
        }
        set
        {
          if (NativeLibrary.Is64Bit)
            NativeMethods.X64.MagickSettings_ColorSpace_Set(Instance, (UIntPtr)value);
          else
            NativeMethods.X86.MagickSettings_ColorSpace_Set(Instance, (UIntPtr)value);
        }
      }
      public ColorType ColorType
      {
        get
        {
          UIntPtr result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_ColorType_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_ColorType_Get(Instance);
          return (ColorType)result;
        }
        set
        {
          if (NativeLibrary.Is64Bit)
            NativeMethods.X64.MagickSettings_ColorType_Set(Instance, (UIntPtr)value);
          else
            NativeMethods.X86.MagickSettings_ColorType_Set(Instance, (UIntPtr)value);
        }
      }
      public CompressionMethod CompressionMethod
      {
        get
        {
          UIntPtr result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_CompressionMethod_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_CompressionMethod_Get(Instance);
          return (CompressionMethod)result;
        }
        set
        {
          if (NativeLibrary.Is64Bit)
            NativeMethods.X64.MagickSettings_CompressionMethod_Set(Instance, (UIntPtr)value);
          else
            NativeMethods.X86.MagickSettings_CompressionMethod_Set(Instance, (UIntPtr)value);
        }
      }
      public bool Debug
      {
        get
        {
          bool result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_Debug_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_Debug_Get(Instance);
          return result;
        }
        set
        {
          if (NativeLibrary.Is64Bit)
            NativeMethods.X64.MagickSettings_Debug_Set(Instance, value);
          else
            NativeMethods.X86.MagickSettings_Debug_Set(Instance, value);
        }
      }
      public string Density
      {
        get
        {
          IntPtr result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_Density_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_Density_Get(Instance);
          return UTF8Marshaler.NativeToManaged(result);
        }
        set
        {
          using (INativeInstance valueNative = UTF8Marshaler.CreateInstance(value))
          {
            if (NativeLibrary.Is64Bit)
              NativeMethods.X64.MagickSettings_Density_Set(Instance, valueNative.Instance);
            else
              NativeMethods.X86.MagickSettings_Density_Set(Instance, valueNative.Instance);
          }
        }
      }
      public Endian Endian
      {
        get
        {
          UIntPtr result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_Endian_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_Endian_Get(Instance);
          return (Endian)result;
        }
        set
        {
          if (NativeLibrary.Is64Bit)
            NativeMethods.X64.MagickSettings_Endian_Set(Instance, (UIntPtr)value);
          else
            NativeMethods.X86.MagickSettings_Endian_Set(Instance, (UIntPtr)value);
        }
      }
      public string Format
      {
        get
        {
          IntPtr result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_Format_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_Format_Get(Instance);
          return UTF8Marshaler.NativeToManaged(result);
        }
        set
        {
          using (INativeInstance valueNative = UTF8Marshaler.CreateInstance(value))
          {
            if (NativeLibrary.Is64Bit)
              NativeMethods.X64.MagickSettings_Format_Set(Instance, valueNative.Instance);
            else
              NativeMethods.X86.MagickSettings_Format_Set(Instance, valueNative.Instance);
          }
        }
      }
      public string Font
      {
        get
        {
          IntPtr result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_Font_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_Font_Get(Instance);
          return UTF8Marshaler.NativeToManaged(result);
        }
        set
        {
          using (INativeInstance valueNative = UTF8Marshaler.CreateInstance(value))
          {
            if (NativeLibrary.Is64Bit)
              NativeMethods.X64.MagickSettings_Font_Set(Instance, valueNative.Instance);
            else
              NativeMethods.X86.MagickSettings_Font_Set(Instance, valueNative.Instance);
          }
        }
      }
      public double FontPointsize
      {
        get
        {
          double result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_FontPointsize_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_FontPointsize_Get(Instance);
          return result;
        }
        set
        {
          if (NativeLibrary.Is64Bit)
            NativeMethods.X64.MagickSettings_FontPointsize_Set(Instance, value);
          else
            NativeMethods.X86.MagickSettings_FontPointsize_Set(Instance, value);
        }
      }
      public bool Monochrome
      {
        get
        {
          bool result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_Monochrome_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_Monochrome_Get(Instance);
          return result;
        }
        set
        {
          if (NativeLibrary.Is64Bit)
            NativeMethods.X64.MagickSettings_Monochrome_Set(Instance, value);
          else
            NativeMethods.X86.MagickSettings_Monochrome_Set(Instance, value);
        }
      }
      public Interlace Interlace
      {
        get
        {
          UIntPtr result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_Interlace_Get(Instance);
          else
            result = NativeMethods.X86.MagickSettings_Interlace_Get(Instance);
          return (Interlace)result;
        }
        set
        {
          if (NativeLibrary.Is64Bit)
            NativeMethods.X64.MagickSettings_Interlace_Set(Instance, (UIntPtr)value);
          else
            NativeMethods.X86.MagickSettings_Interlace_Set(Instance, (UIntPtr)value);
        }
      }
      public bool Verbose
      {
        get
        {
          bool result;
          if (NativeLibrary.Is64Bit)
            result = NativeMethods.X64.MagickSettings_Verbose_Get(Instance);
